feat: 방명록 유효성검사 구현

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
             class="form-control"
             id="name"
             placeholder="dlfma"
+            maxlength="10"
           />
           <label for="name">이름</label>
         </div>
