refactor: 멤버 추가시 이미지, 이름 타입 수정

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <section class="mypostingbox">
         <div class="form-floating mb-3">
           <input
-            type="email"
+            type="text"
             class="form-control"
             id="image"
             placeholder="이미지 주소"
@@ -249,7 +249,7 @@
         </div>
         <div class="form-floating mb-3">
           <input
-            type="email"
+            type="text"
             class="form-control"
             id="name"
             placeholder="dlfma"
