--- a/personalPage.html
+++ b/personalPage.html
@@ -231,6 +231,9 @@
               }
             );
             alert("작성 완료.");
+            $("#guestName").val(""); // 작성자 이름 입력 필드 초기화
+            $("#guestMessage").val(""); // 메시지 입력 필드 초기화
+
             renderGuestbookEntries(); // 방명록 다시 렌더링
           } catch (error) {
             console.error("방명록 작성 중 오류 발생:", error);
